[package]
name = "mfattic"
version = "1.0.0"
description = "The last MFA platform you'll ever need."
authors = ["Quanti Pty Ltd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mfattic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.6", features = [] }
tauri-plugin-shell = "2.0.0-beta.1"
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
